# World-war-stratagy

./: .gitignore  BUILD_GUIDE.md  Cargo.toml  GEODATA_INTEGRATION.md  GETTING_STARTED.md  MIGRATION_COMPLETE.md  PROJECT_OVERVIEW.md  PROJECT_STATUS.md  README.md  build_err.txt  check_errors.txt  err.txt  start.bat  start.sh  test_geodata.bat  test_geodata.sh
.github/: instruction.md
crates/alalamien-api/: Cargo.toml
crates/alalamien-api/src/: handlers.rs  lib.rs  main.rs  state.rs
crates/alalamien-desktop/: Cargo.toml  tauri.conf.json
crates/alalamien-desktop/icons/: icon.icns
crates/alalamien-desktop/src/: embedded_server.rs  main.rs
crates/alalamien-dev-tools/: Cargo.toml
crates/alalamien-dev-tools/src/: event_debugger.rs  lib.rs  performance_monitor.rs  scenario_editor.rs  state_inspector.rs
crates/alalamien-engine/: Cargo.toml
crates/alalamien-engine/src/: lib.rs
crates/alalamien-engine/src/core/: deterministic.rs  mod.rs  province_graph.rs  state.rs  tick.rs  types.rs  world.rs
crates/alalamien-engine/src/game/: borders.rs  geodata.rs  mod.rs
crates/alalamien-engine/src/instrumentation/: debugger.rs  metrics.rs  mod.rs  tracing_setup.rs
crates/alalamien-engine/src/subsystems/: ai_advanced.rs  ai_basic.rs  alliance.rs  alliance_dataset.rs  combat.rs  demographic.rs  diplomacy.rs  economic.rs  espionage.rs  events.rs  factions.rs  intervention.rs  legitimacy.rs  logistics.rs  mod.rs  notifications.rs  nuclear.rs  occupation.rs  stability.rs  trade.rs  vassalage.rs  warfare.rs
crates/alalamien-engine/src/tests/: fixtures.rs  mod.rs
crates/alalamien-engine/src/tests/advanced/: chaos_fuzz.rs  determinism.rs  edge_cases.rs  mod.rs  performance.rs  quality_metrics.rs  regression.rs  subsystem_performance.rs  system_validation.rs
crates/alalamien-engine/src/tests/integration/: alliance_warfare.rs  civil_war_cascade.rs  diplomatic_scenarios.rs  economic_military.rs  economic_scenarios.rs  espionage_scenario.rs  game_depth_scenarios.rs  mod.rs  multi_nation_scenarios.rs  notification_scenarios.rs  nuclear_weapons_scenario.rs  pre_ui_hardening.rs  warfare_diplomacy.rs
crates/alalamien-engine/src/tests/unit/: core_tick.rs  core_types.rs  core_world.rs  mod.rs
crates/alalamien-engine/src/tests/unit/subsystems/: alliance.rs  diplomacy.rs  economic.rs  events.rs  factions.rs  intervention.rs  legitimacy.rs  mod.rs  notifications.rs  nuclear.rs  warfare.rs
crates/alalamien-engine/src/utils/: math.rs  mod.rs
crates/alalamien-ui/: Cargo.toml
crates/alalamien-ui/src/: icon.rs  main.rs
crates/alalamien-ui/src/api/: mod.rs  plugin.rs
crates/alalamien-ui/src/audio/: mod.rs
crates/alalamien-ui/src/components/: mod.rs
crates/alalamien-ui/src/map/: map_plugin.rs  mod.rs  nation_colors.rs  nation_seed_data.rs  picking.rs  projection.rs  shapefile_loader.rs  tessellator.rs
crates/alalamien-ui/src/resources/: mod.rs  player_nation.rs
crates/alalamien-ui/src/states/: menu.rs  mod.rs
crates/alalamien-ui/src/systems/: animation.rs  button.rs  camera.rs  game_clock.rs  loading.rs  menu_input.rs  mod.rs  navigation.rs  ui_manager.rs
crates/alalamien-ui/src/ui/: background.rs  credits.rs  hud.rs  load_game.rs  menu.rs  mod.rs  playing_hud.rs
crates/alalamien-ui/src/vfx/: mod.rs
docs/: ARCHITECTURE.md  COMPLETION_AND_NEXT_STEPS.md  COMPLETION_SUMMARY.md  DEVELOPMENT_GUIDE.md  DOCUMENTATION_INDEX.md  FILE_MANIFEST.md  GEOLOADER_INTEGRATION.md  GEOSPATIAL_DATA_PLAN.md  GEOSPATIAL_SUMMARY.md  PATH_C_CONFIRMED.md  PHASE_0_MAIN_MENU.md  PROJECT_INITIALIZED.md  QUICK_REFERENCE.md  QUICK_REFERENCE_V04_AND_NEXT.md  ROADMAP.md  STATUS_OVERVIEW.md  TEST_ARCHITECTURE_SUMMARY.md  TEST_COVERAGE_REPORT.md  TEST_COVERAGE_SUMMARY.md  TEST_FIXTURE_QUICK_REFERENCE.md  TEST_MATRIX.md  TEST_REFACTOR_COMPLETION.md  V0.1_BUILD_COMPLETE.md  V0.1_GEOLOADER_COMPLETE.md  V0.1_PLAN.md  V0.4_ALLIANCE_SYSTEM.md  V0.4_API_REFERENCE.md  V0.4_COMPLETION_ANALYSIS.md  V0.4_DIPLOMACY_SYSTEM.md  V0.4_INTEGRATION_GUIDE.md  V0.4_OVERVIEW.md  V0.4_PROGRESS_SUMMARY.md  V0.6_HARDEN_PHASE1_COMPLETION.md  V0.6_HARDEN_TEST_HARNESS.md  V0.6_PROGRESS.md  V0.6_WEEK4_COMPLETION.md  V0.6_WEEK4_INTERVENTION.md  V0.7_PRE_UI_HARDENING_COMPLETE.md  V0.8_PHASE_0_STATUS.md  V0.8_UI_IMPLEMENTATION_ROADMAP.md  (+5 more)
docs/versions/: STABILITY_SYSTEM_GUIDE.md  V0.1_COMPLETION_CERTIFICATE.md  V0.1_FINAL_SUMMARY.md  V0.1_TARGETS_REVIEW.md  V0.2_PROGRESS.md  V0.35_COMPLETE.md  V0.35_SESSION_COMPLETE.md  V0.3_PLAN.md  VERSION_INDEX.md
scripts/: extract_borders.py  extract_cities.py  extract_nations.py  extract_provinces.py  load_borders.py  test_nations.py
src/game/scenarios/: borders.json  borders_from_countries.json  cities.json  nations.json  provinces.json
