[workspace]
resolver = "2"
members = [
    "crates/alalamien-engine",
    "crates/alalamien-api",
    "crates/alalamien-desktop",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Alalamien War Team"]
license = "MIT"

[workspace.dependencies]
# ECS & Core Engine
bevy_ecs = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
glam = { version = "0.29", features = ["serde"] }
rayon = "1.10"
uuid = { version = "1.10", features = ["v4", "serde"] }

# Web Server & API
axum = "0.7"
tokio = { version = "1.40", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Utilities
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3.8"

# Testing
criterion = "0.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true

[profile.dev.package."*"]
opt-level = 2
