[workspace]
resolver = "2"
members = [
    "crates/alalamien-engine",
    "crates/alalamien-api",
    "crates/alalamien-desktop",
    "crates/alalamien-ui",
    "crates/alalamien-dev-tools",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Alalamien War Team"]
license = "MIT"

[workspace.dependencies]
# ECS & Core Engine
bevy_ecs = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
glam = { version = "0.29", features = ["serde"] }
rayon = "1.10"
uuid = { version = "1.10", features = ["v4", "serde"] }

# Web Server & API
axum = "0.7"
tokio = { version = "1.40", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Utilities
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3.8"

# Bevy & Graphics (V0.8 UI)
bevy = { version = "0.14", features = ["dynamic_linking"] }
bevy_core_pipeline = "0.14"
bevy_sprite = "0.14"
bevy_ui = "0.14"
bevy_render = "0.14"
bevy_asset = "0.14"
bevy_window = "0.14"
bevy_audio = { version = "0.14", features = ["mp3"] }

# HTTP Client (API bridge)
reqwest = { version = "0.11", features = ["json"] }

# Geospatial (V0.8 Phase 1 map rendering)
shapefile = "0.5"
earcutr = "0.4"

# Testing
criterion = "0.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true

[profile.dev.package."*"]
opt-level = 2
