[package]
name = "alalamien-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Engine
alalamien-engine = { path = "../alalamien-engine" }

# Web Server
axum = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# ECS and types (needed for handlers)
bevy_ecs = { workspace = true }
uuid = { workspace = true }
glam = { workspace = true }

# Utilities
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
