[package]
name = "alalamien-desktop"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Engine & API
alalamien-engine = { path = "../alalamien-engine" }
alalamien-api = { path = "../alalamien-api" }

# Desktop Integration (Tauri)
tauri = { version = "2.1", features = [] }
tauri-plugin-shell = "2.0"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }

[build-dependencies]
tauri-build = { version = "2.0", features = [] }
