[package]
name = "alalamien-dev-tools"
version = "0.8.0"
edition = "2021"
authors = ["Alalamien War Team"]
description = "Developer tools for Alalamien simulation engine"
license = "MIT"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
bevy = { workspace = true }
bevy_ui = { workspace = true }
anyhow = { workspace = true }
